mardown container spacing fix

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -64,3 +64,22 @@ a {
 .mb-4-nl:not(:last-of-type) {
   margin-bottom: 1.5rem;
 }
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 1rem;
+}
+
+.markdown-container > :last-child {
+  margin-bottom: 0 !important;
+}
